--- a/src/assets/css/Layout.css
+++ b/src/assets/css/Layout.css
@@ -5,13 +5,14 @@
 }
 
 .Layout-top nav{
-    background-color:white;
+    background-color: #4f5f76;
     display: flex;
     justify-content: space-between;
     padding: 15px;
     align-items: center;
     width: 100vw;
     height: 60px;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1000; /* Lo mantiene por encima de otros elementos */
@@ -19,9 +20,8 @@
 
 }
 
-
 .Layout-top nav a{
-    color: black;
+    color: white;
     padding: 15px;
     margin: 13px;
     border-radius: 10px;
@@ -29,5 +29,78 @@
 }
 
 .Layout-top nav a:hover{
-   background-color: orange;
+   background-color: #28b13a;
+}
+
+/*Apartado del logo en el top*/
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 20px;
+    text-decoration: none;
+}
+
+
+.logo-img {
+    width: 25px;       
+    height: 25px;      
+    object-fit: contain; 
+}
+
+
+.logo-text {
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+
+/*Apartado del footer*/
+.footer {
+    background-color: #f8f9fa; /* Color de fondo */
+    padding: 20px 0;
+    width: 100%;
+    position: fixed; /* Fijo en la parte inferior */
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    border-top: 1px solid #e0e0e0; /* Borde superior sutil */
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.copyright {
+    margin: 0;
+    color: #666;
+    font-size: 0.9rem;
+}
+
+.social-icons {
+    display: flex;
+    gap: 15px; /* Espacio entre íconos */
+}
+
+.social-icons a {
+    color: #333; /* Color de los íconos */
+    font-size: 1.2rem;
+    transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: orange; /* Color al pasar el mouse */
+}
+
+main {
+    margin-top: 60px;    /* Altura del header */
+    margin-bottom: 60px; /* Altura del footer */
+    padding: 20px;       /* Espacio interno opcional */
+    min-height: calc(100vh - 120px); /* Ajusta la altura restante */
 }
