--- a/src/ParkAdm/ParkAdm.css
+++ b/src/ParkAdm/ParkAdm.css
@@ -1,7 +1,7 @@
 .parking-bg {
     width: 100vw;
     height: 100vh;
-    background-image: url('/img.png');
+   
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -106,4 +106,11 @@
 }
 .nombre-parqueo {
     margin-bottom: 1rem;
+}
+.form-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+    justify-content: center;
 }
