--- a/src/ParkAdm/ParkAdm.css
+++ b/src/ParkAdm/ParkAdm.css
@@ -1,13 +1,11 @@
 .parking-bg {
-    width: 100vw;
-    height: 100vh;
-   
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
     justify-content: center;
+    
 }
 
 .content-box {
