poner donde en otro lugar PArkAdm y cambiar tamaño input

--- a/src/assets/css/ParkAdm.css
+++ b/src/assets/css/ParkAdm.css
@@ -35,6 +35,13 @@
     justify-content: center;
 }
 
+input.form-control {
+    overflow: auto;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    
+  }
+  
 .easypark-input {
     padding: 0.5rem;
     font-size: 1rem;
