--- a/src/assets/css/Layout.css
+++ b/src/assets/css/Layout.css
@@ -42,18 +42,40 @@
 }
 
 
-.logo-img {
-    width: 25px;       
-    height: 25px;      
-    object-fit: contain; 
-}
 
+
+.logo-img {
+  height: 40px;
+  width: auto;
+  margin-top: -4px;
+}
 
 .logo-text {
-    color: white;
-    font-weight: bold;
-    font-size: 1.2rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: white;
 }
+
+.navbar-nav .nav-link {
+  color: white !important;
+}
+
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 998; /* Debajo del navbar que tiene z-index: 999+ */
+}
+
+
+.navbar-nav .nav-link:hover {
+  text-decoration: underline;
+}
+
+
 
 
 /*Apartado del footer*/
