--- a/src/assets/css/Layout.css
+++ b/src/assets/css/Layout.css
@@ -64,11 +64,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 990; /* Debajo del navbar que tiene z-index: 999+ */
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* semitransparente */
+  z-index: 998; /* asegúrate de que esté debajo del navbar (si este tiene z-index 999) */
 }
+
 
 
 .navbar-nav .nav-link:hover {
