--- a/src/assets/css/Registrar.css
+++ b/src/assets/css/Registrar.css
@@ -7,7 +7,21 @@
     justify-content: center;
     
 }
-
+.Fondo {
+    display: flex;
+    min-height: 50vh;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, #0288D1, #03A9F4, #4fc3f7);
+    background-attachment: fixed;
+    padding: 20px;
+}
+body {
+    background-image: linear-gradient(to bottom right, #2c2c2c, #2c2c2c);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 .content-box {
     background-color: rgba(255, 255, 255, 0.85);
     border-radius: 1rem;
