--- a/src/assets/css/ParkAdm.css
+++ b/src/assets/css/ParkAdm.css
@@ -43,7 +43,7 @@ input.form-control {
   }
 
 .add-btn {
-    background-color: #2c2c2c;
+    background-color: #007bff;
     color: white;
     padding: 0.5rem 1rem;
     border: none;
