`Updated Firebase hosting cache and CSS files for Login and Home pages`

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -13,7 +13,15 @@
     background-color: transparent;
     border: none;
     width: 100%;
-    padding: 2rem;
+    
+}
+.input-group > button {
+  width: 40px;         /* Tamaño pequeño del botón */
+  min-width: 40px;     /* Evita que se expanda */
+  padding: 0;          /* Quita espacio interno extra */
+  display: flex;       /* Centra el ícono */
+  align-items: center;
+  justify-content: center;
 }
 
 /* Text content styling */
@@ -140,7 +148,7 @@ h1 {
 
 @media (max-width: 576px) {
     .form-control {
-        padding: 1rem;
+        padding: 0.1rem;
     }
     
     .col-white {
