--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -47,13 +47,13 @@
 .form-group label {
     display: block;
     margin-bottom: 8px;
-    font-weight: 600;
+    font-weight: 10;
     color: #2c3e50;
     font-size: 14px;
 }
 
 .form-control {
-    width: 70%;
+    width: 100%;
     padding: 12px 15px;
     border-radius: 8px;
     border: 1px solid #dfe6e9;
@@ -81,14 +81,13 @@
 }
 
 .input-group button {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-left: 0;
-    background-color: #f8f9fa;
-    border-color: #dfe6e9;
-    color: #7f8c8d;
-    transition: all 0.2s ease;
+    padding: 0 10px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 .input-group button:hover {
     background-color: #e9ecef;
