`Refactor UI components and update asset files`

--- a/src/assets/css/Modal.css
+++ b/src/assets/css/Modal.css
@@ -23,7 +23,7 @@
     overflow: hidden;
     margin: auto;
     max-width: 350px;
-    background-color: beige;
+    background-color: rgb(61, 61, 57);
     box-shadow: 0cqh;
     flex-direction: column;
     width: 100%; /* Hace que el modal ocupe el 100% del ancho de su contenedor padre */
